Wed Feb 25 15:50:07 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (mod_module_eval): clear the_scope's PRIVATE flag before
	  calling eval().

	* eval.c (rb_eval): needed to keep prot_tag->retval before
	  evaluating the ensure clause.

Tue Feb 24 11:16:32 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (yylex): reserved words can be appear as method names at
 	  right after 'def' and `.'(dot), like foo.next.

	* eval.c (return_check): checks for return out of thread (formaly
	  done in return_value).

	* eval.c (POP_TAG): copy retval to outer level.

	* eval.c (return_value): just set retval, no check, no unwinding.

	* parse.y (nextc): line continuation by backslash at end of line.

	* regex.c (re_compile_pattern): forgot to clear pending_exact on
	  closing parentheses.

	* parse.y (assignable): should not assign dyna_var to true, if it
 	  is already defined.

Mon Feb 23 12:11:51 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* re.c (reg_s_quote): needed to be mbchar aware.

	* eval.c (proc_s_new): wrong iter mark.

Sat Feb 21 22:59:30 1998  MAEDA shugo  <shugo@po.aianet.ne.jp>

	* io.c (f_syscall): no argument check.

Fri Feb 20 10:17:51 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.1b8 released.

	* ext/kconv/kconv.c (kconv_kconv): default output code now be
	  determined according to the value of $KCODE.

	* re.c (rb_get_kcode): can retrieve $KCODE from C code. 

	* parse.y (stmt): if/unless modifiers returns nil, if condition is 
	  not established.

Thu Feb 19 11:06:47 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ext/kconv/kconv.c (kconv_kconv): charcode can be specified by
	  code name (JIS, SJIS, EUC like value of $KCODE).

	* regex.c (re_compile_pattern): forgot to fixup_jump for (?:..).

	* regex.c (re_compile_pattern): needed to clear pending_exact on
	  non-registering grouping (?:...).

Wed Feb 18 19:54:21 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
